--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
 
 
     <footer class=" py-3 text-center">
-      <div class="text-white"><a href="https://www.tiktok.com/community-guidelines?lang=pt_BR" class="text-white">Termos de Uso</a> | <a href="https://www.tiktok.com/legal/page/row/privacy-policy/pt-BR" class="text-white">Política de Privacidade</a></div>
+      <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
         <div class="text-footer">
           <H6>Maconaria Antiga e Aceita ltda. - CNPJ: 35.704.387/0001-41</H6>
           <h6>Av. Marechal Deodoro 1378 - Centro
             CEP: 78.005-100 - Cuiaba/MT</h6>
-            <h6>Telefone de contato: <a href="">+5565999107452</a></h6>
+            <h6>Telefone de contato: <a href="https://api.whatsapp.com/send?phone=5565999107452">+5565999107452</a></h6>
             <h6> <img width="20px" height="16px" src="assets/img/gmail.png" alt="img">E-mail: <a href="maconariaprofanos@gmail.com">maconariaprofanos@gmail.com</a></h6>
             <h6> <img width="20px" height="20px" src="assets/img/inst.png" alt="img"> Instagram <a href="https://www.instagram.com/maconariaantiga/?igshid=YmMyMTA2M2Y%3D">@maconariaantiga</a></h6>
             <h6> <img width="20px" height="20px" src="assets/img/tik.png" alt="img"> Tiktok <a href="https://www.tiktok.com/@freemasonbrazil2022?_t=8W3uJ9ckgWD&_r=1">freemasonbrazil2022</a></h6>
